# auth-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  envoy.yaml
deploy/: Dockerfile  README.md  registry.sh
deploy/charts/registry-proxy/: Chart.yaml  values.yaml
deploy/charts/registry-proxy/templates/: NOTES.txt  _helpers.tpl  secrets.yaml  wasm.yaml
https/: get.http
src/: lib.rs
tests/: tests.rs
